silly me, that's a multiline string

--- a/.build.yml
+++ b/.build.yml
@@ -4,7 +4,7 @@ secrets:
 sources:
   - git+ssh://git@git.sr.ht/~rosin/dotfiles
 tasks:
-  - mirror-dotfiles-to-github:
+  - mirror-to-github: |
       cd ~/dotfiles
       ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
       git remote add github git@github.com:somniamble/dotfiles.git
