--- a/config/atuin/config.toml
+++ b/config/atuin/config.toml
@@ -185,7 +185,7 @@ keymap_mode = "vim-normal"
 # ]
 
 ## Set commands that should be totally stripped and ignored from stats
-# common_prefix = ["sudo"]
+common_prefix = ["blog"]
 
 ## Set commands that will be completely ignored from stats
 # ignored_commands = [
