--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,8 +5,9 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 bind r source-file ~/.tmux.conf
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key c new-window -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
