add kitty, chawan

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,7 @@
 
 unbind C-b
 set-option -g prefix C-a
+set -g allow-passthrough on
 bind-key C-a send-prefix
 
 bind r source-file ~/.tmux.conf
@@ -14,5 +15,6 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 set-option -sg escape-time 10
-set-option -g default-terminal "screen-256color"
+# set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-kitty"
 set-option -g history-limit 10000
