--- a/config/i3/config
+++ b/config/i3/config
@@ -25,8 +25,9 @@ font pango:monospace 8
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 #
-set $TERMINAL alacritty
+set $TERMINAL kitty
 #
+exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=ssh,secrets,pkcs11
 exec --no-startup-id sh ~/.screenlayout.sh
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 #exec --no-startup-id alacritty
