--- a/config/i3/config
+++ b/config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font IosevkaTermNerdFont:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -26,6 +26,10 @@ font pango:monospace 8
 # screen before suspend. Use loginctl lock-session to lock your screen.
 #
 set $TERMINAL kitty
+
+exec --no-startup-id setxkbmap -option ctrl:nocaps
+exec --no-startup-id setxkbmap -option compose:prsc
+exec --no-startup-id picom
 #
 exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=ssh,secrets,pkcs11
 exec --no-startup-id sh ~/.screenlayout.sh
@@ -61,7 +65,8 @@ set $right l
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec "$TERMINAL -e /bin/sh -c 'tmux list-session && tmux a || tmux'"
+# bindsym $mod+Return exec "$TERMINAL -e /bin/sh -c 'tmux list-session && tmux a || tmux'"
+bindsym $mod+Return exec "kitty -1"
 
 # kill focused window
 bindsym $mod+Shift+q kill
